--- a/index.html
+++ b/index.html
@@ -2,7 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>CK Portfolio</title>
   </head>
-  </body> 
+  <body> 
+      <!-- navigation block -->
+      <header>
+          <h1>
+              <a href="/">Cimone Alyse</a>
+          </h1>
+          <nav>
+              <ul>
+                  <li>
+                      <a href="#about-me">About Me</a>
+                  </li>
+                  <li> 
+                      <a href="#work">Work</a>
+                  </li>
+                  <li>
+                      <a href="#Contact">Contact</a>
+                  </li>
+              </ul>
+          </nav>
+    </header>
+    <!-- End Navigation Bar-->
+    
+    <!-- Cool Subtitle Section -->
+    
+
+
