--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     </header>
     <!-- End Navigation Bar-->
     
-    <!-- Cool Subtitle Section -->
-    
+    <!-- Hero/Cool Subtitle Section -->
+    <section class="hero">
+        <div class="hero-cta">
+            <h2>Rockstar Coder</h2>
+        </div>
+    </section>
+
 
 
