--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <!-- TODO CHANGE IMAGE PATH-->
                 <a href="https://cimonealyse.github.io/run-buddy/#reach-out" target="_blank">
                     <div class="work-card">
-                        <img src="./assets/Images/step-4.svg"></img>
+                        <img src="./assets/Images/Screen Shot 2022-06-01 at 7.42.44 PM.png"></img>
                     <div class="cover">
                         <p>My First Website</p>
                     </div>
